[gd_scene load_steps=5 format=3 uid="uid://bmhk63jchxjgp"]

[ext_resource type="Script" path="res://Scenes/UI/GameOver.gd" id="1_oxgyl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hoyko"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_156da"]
font_size = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glfiu"]
bg_color = Color(0, 0, 0.588235, 1)

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_oxgyl")

[node name="Screen" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hoyko")

[node name="Control" type="Control" parent="Screen"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Screen/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.153
anchor_top = 0.412
anchor_right = 0.847
anchor_bottom = 0.588
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_156da")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Screen/Control"]
custom_minimum_size = Vector2(250, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = 53.0
offset_right = 123.0
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start Over" type="Button" parent="Screen/Control/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_glfiu")
text = "Start Over"
metadata/_edit_use_anchors_ = true

[node name="VSeparator" type="VSeparator" parent="Screen/Control/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Load Save" type="Button" parent="Screen/Control/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_glfiu")
disabled = true
text = "Load Save"
metadata/_edit_use_anchors_ = true

[node name="VSeparator2" type="VSeparator" parent="Screen/Control/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="exitgame" type="Button" parent="Screen/Control/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_glfiu")
text = "Exit Game"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Screen/Control/HBoxContainer/Start Over" to="." method="_on_start_over_pressed"]
[connection signal="pressed" from="Screen/Control/HBoxContainer/Load Save" to="." method="_on_load_save_pressed"]
[connection signal="pressed" from="Screen/Control/HBoxContainer/exitgame" to="." method="_on_exitgame_pressed"]
